--- a/kelas10-3.html
+++ b/kelas10-3.html
@@ -97,6 +97,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMBRHBb6OTqG_Y5ShCFPKf4JWa3jaSKFftK05fqyuaB_4wPw/viewform?usp=sf_link" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBO2CrW9uwf8BqJmyqDCVMzL-QJG62S7DqeOI6VXn4cDoUBQ/viewform?usp=sf_link" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc65wvhol9b255p4XeSAODoZ-F7xup2__03C6ad5O7pM4CBAQ/viewform?usp=sf_link" target="_blank">Akidah Akhlak</a></li> 
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzbdkwSLdJcQ6xeNHxhkoxyhD4PY5-UxkRnGD-K4Psp1ZzGg/viewform?usp=sharing" target="_blank">Geografi</a></li>
     </ul>
 </body>
 </html>
