--- a/kelas11-2.html
+++ b/kelas11-2.html
@@ -96,6 +96,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc-P1q-uDWoad73gOQO3-cUKQ4pAPgyGfB9_T4-XpATzl2VSQ/viewform?usp=sf_link" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHLOJNxGNWrdFgBLl-74PVi9MGJ4hwgZLeOQGkuHyzwYyGNg/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfzsJriM6sFkEU8s6hOgX9aXhnskHd0EgmUxWv02JcTjEKOUQ/viewform?usp=sf_link" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScIYKW7LC5KYPW7tnrzPI0HV48HSUpNJ9JLdidtg7i0bYVIpQ/viewform?usp=sharing" target="_blank">Geografi</a></li>
     </ul>
 </body>
 </html>
