--- a/kelas12-2.html
+++ b/kelas12-2.html
@@ -95,6 +95,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfwcrKvJoLS8AqILHduN9SPMejD8UOxphvMxUrCqZI1oG40ZQ/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSekBaUaIkynmPDmzElNgtSgEee2iFqMtAptNWT6o7pMeHYS5A/viewform?usp=sf_link" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe-VU08aswSSZh58walU1d4SbE0OM12-7L7J_kNttyMB98Wgw/viewform?usp=sf_link" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeiHiKERRpJHypqIaE2bfOSkBB-5pNiNx68uLYvLZVdBTlK7w/viewform?usp=sharing" target="_blank">Geografi</a></li>
     </ul>
 </body>
 </html>
