--- a/kelas11-1.html
+++ b/kelas11-1.html
@@ -97,6 +97,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHLOJNxGNWrdFgBLl-74PVi9MGJ4hwgZLeOQGkuHyzwYyGNg/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfzsJriM6sFkEU8s6hOgX9aXhnskHd0EgmUxWv02JcTjEKOUQ/viewform?usp=sf_link" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScIYKW7LC5KYPW7tnrzPI0HV48HSUpNJ9JLdidtg7i0bYVIpQ/viewform?usp=sharing" target="_blank">Geografi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSczhV_W9DrCdBa4EH2YSpEV0ZeDTKAwKSjYJiXxdc8O8lED0w/viewform?usp=sf_link" target="_blank">Seni Budaya</a></li>
     </ul>
 </body>
 </html>
