--- a/kelas12-3.html
+++ b/kelas12-3.html
@@ -80,22 +80,22 @@
 <body>
     <h1>Mata Pelajaran Kelas 12-3</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScBvO_vfCn0HzYNl5GtqwCdXhEXyv2kpxEdhOv3YNfRFcoTow/viewform?usp=sf_link" target="_blank">Ekonomi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd_PmcxOVvsvrsN0yqi5td-7RJCC0icQGOKbrjnLB9hlO-1ZQ/viewform?usp=sf_link" target="_blank">Bahasa Inggris</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScGD2lNUF67Jb1CHDE49Fe1VTR7wigijZ_h8vckX7Dh9ZTgpA/viewform?usp=sf_link" target="_blank">Bahasa Arab</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScyP5JZ525gSik0zIuI0zPIi-sCbbu5vaDTImCINW2gqFK2_Q/viewform?usp=sf_link" target="_blank">Sejarah Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7oWULOxBnzROgu7BYeWYfCd02SqQEOv10-3ZIZ4p_dMMGcQ/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSew2lml9H9pbU3QmAEHN2XL5fYe1apEQ1pQqg81fxrDsapKKA/viewform?usp=sf_link" target="_blank">Qur'an Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScUxre0D0Gsd8TmSE6Y_JPoqmcPlgH-I9383RklTk75L43DFQ/viewform?usp=sf_link" target="_blank">Fisika</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf3Wweev81wLMOuin4S-eTKztuTeFDZfrtSxzP3aSgTtEQ6wA/viewform?usp=sf_link" target="_blank">Biologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScbQR8vG0h4F0Ahuek4zKfJVu0TjKZL1MpBPc8HG5eJOSQS7g/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdK3MER5yWdOkvbraj-TIqw40DHazSHVkvJ3e-lBbVWWQ-UaQ/viewform?usp=sf_link" target="_blank">PKN</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdx-WbSznxs2I91c0fUVPy8Vq0CWJ6c7HyqeKSrqguz7NFJpw/viewform?usp=sf_link" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeTaH03kg-FqUYO9bZ9HIFMmLAmj5_FUNRgWfhfm70W9WdblQ/viewform?usp=sf_link" target="_blank">Matematika Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfwcrKvJoLS8AqILHduN9SPMejD8UOxphvMxUrCqZI1oG40ZQ/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSekBaUaIkynmPDmzElNgtSgEee2iFqMtAptNWT6o7pMeHYS5A/viewform?usp=sf_link" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe-VU08aswSSZh58walU1d4SbE0OM12-7L7J_kNttyMB98Wgw/viewform?usp=sf_link" target="_blank">Akidah Akhlak</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeiHiKERRpJHypqIaE2bfOSkBB-5pNiNx68uLYvLZVdBTlK7w/viewform?usp=sharing" target="_blank">Geografi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSepHtIKc8e1aY2_WqzmJkrPLhLUdtHph65uFth0KkYa-S2-Cw/viewform?usp=header" target="_blank">Matematika Peminatan</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTIAUXvyQNkcw4XM_nV-ga7QKnANQPmGf4tztmTi-HsVurkQ/viewform?usp=header" target="_blank">Al-Qur'an Hadist</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeyR466bpa2rqWqKsrZQh8lofkKlorl35xRinhtz8zTFPaVdQ/viewform?usp=header" target="_blank">Biologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBG_nhXpMsml8FM1ScVhouFgO_3XGKSI-5M8g54PwVkj-usg/viewform?usp=sharing" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHUWmWJwR5myITE2-g0oqp09ElCS_9gJqRVSqlzlqgkhan-w/viewform?usp=header" target="_blank">Kimia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdWpV5So8pU8-R0T_M-bzLxUtfeMmOO7-lVLSHKb6h6So1syA/viewform?usp=sharing" target="_blank">Fikih</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYeXS_4V_PXAgfwPpbbO0BABmWOZqiXLEkrJUetuBbbOpCHA/viewform?usp=header" target="_blank">Fisika</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7SQ-41BVNXFNwte_bOzZ5noq6rzHw5NQpVfQ8ZFhcoPhalQ/viewform?usp=header" target="_blank">Sejarah Kebudayaan Islam</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYY4WiF5B68bVU4_LP97ce4LtrTxF1cAU5JnVG4cnkt-Ep2g/viewform?usp=header" target="_blank">Bahasa Arab</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSePSsX9qyaa8uLj62dXgjCwg_AtCxM3WHO5nJfdPVgrBK8stg/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSff_2Pt3ZsXlLm8FmJeq2xHqDpFo3-0j5iqcis2KS6_uf_B5Q/viewform?usp=sharing" target="_blank">PKN</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd_4zjx4k_8d1l2RleTrcVF3j7W_D_c7wix0oetDVlMiR2-nA/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc_ycy9_jaVPeNcFV5mortSjdq_gmOTW6f-ZZ2aDQ-6L4zj6Q/viewform?usp=header" target="_blank">Bahasa Inggris</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdo7uAeixHNTStAM3W7DUxNnjwDcv-xWm8hrydswe3ezvgkrA/viewform?usp=header" target="_blank">Geografi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScOuRVaUsCA75rxrmWYhRmZwTxnFO_wz-2sf-ULRuDCE5N_FQ/viewform?usp=sharing" target="_blank">Ekonomi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeiHiKERRpJHypqIaE2bfOSkBB-5pNiNx68uLYvLZVdBTlK7w/viewform?usp=sharing" target="_blank">Sejarah Indonesia</a></li>
     </ul>
 </body>
 </html>
