--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
     </header>
     <main>
         <section>
-            <p style="text-align:center; padding: 2rem;">Selamat Datang di Website Ujian Sekolah</p>
+            <p style="text-align:center; padding: 2rem;">Selamat Datang di Website Ujian Madrasah</p>
         </section>
     </main>
     <footer style="text-align: center; padding: 1rem; background-color: #333; color: white;">
-        <p>&copy; 2024 Humas Sekolah</p>
+        <p>&copy; 2024 Humas MAN Manokwari</p>
     </footer>
 </body>
 </html>
