--- a/kelas12-2.html
+++ b/kelas12-2.html
@@ -95,7 +95,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc_ycy9_jaVPeNcFV5mortSjdq_gmOTW6f-ZZ2aDQ-6L4zj6Q/viewform?usp=header" target="_blank">Bahasa Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdo7uAeixHNTStAM3W7DUxNnjwDcv-xWm8hrydswe3ezvgkrA/viewform?usp=header" target="_blank">Geografi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScOuRVaUsCA75rxrmWYhRmZwTxnFO_wz-2sf-ULRuDCE5N_FQ/viewform?usp=sharing" target="_blank">Ekonomi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeiHiKERRpJHypqIaE2bfOSkBB-5pNiNx68uLYvLZVdBTlK7w/viewform?usp=sharing" target="_blank">Sejarah Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScmtIiLy-N6DyWxtB7xO9pXyDrJWU7plctToBxWTt1JIrDZAw/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
     </ul>
 </body>
 </html>
