--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Asesment Madrasah</title>
+    <title>Website Ujian Madrasah</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Reset dasar */
@@ -116,7 +116,7 @@
 </head>
 <body>
     <header>
-        <h1>Website Asesment Madrasah</h1>
+        <h1>Website Ujian Madrasah</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -138,7 +138,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#" tabindex="0">Asesment Kelas 12</a>
+                    <a href="#" tabindex="0">Kelas 12</a>
                     <ul>
                         <li><a href="kelas12-1.html">Kelas 12-1</a></li>
                         <li><a href="kelas12-2.html">Kelas 12-2</a></li>
