--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -94,9 +94,9 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdquhBqEuwd0DcO7Lf2Sg5ZczuBr9njqeiLy2xYR-vlvc8Ndw/viewform?usp=sf_link" target="_blank">Sosiologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfm0gP0W4l7gwGKHc98rQPtxF8hW-Lf7F4GLgYVlvhu5N0u8Q/viewform?usp=sf_link" target="_blank">Kimia Kelas 10 1 dan 2</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXy_j5jbDRhsrE3GL2a3c0a3fBSL56IGRVmv2utMEfDfvMew/viewform?usp=sf_link" target="_blank">Kimia Kelas 10 3 dan 4</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMBRHBb6OTqG_Y5ShCFPKf4JWa3jaSKFftK05fqyuaB_4wPw/viewform?usp=sf_link" target="_blank">Matematika Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScBKrgFtLh9x9Fnu9TXSdq5CwXvGHRz5MnfgLjOYo3FPfAFSg/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBO2CrW9uwf8BqJmyqDCVMzL-QJG62S7DqeOI6VXn4cDoUBQ/viewform?usp=sf_link" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc65wvhol9b255p4XeSAODoZ-F7xup2__03C6ad5O7pM4CBAQ/viewform?usp=sf_link" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHDqnIswlIqfvCbp1G4QabXqAtg3ct8NWVvr8A4YiHjWGVEg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzbdkwSLdJcQ6xeNHxhkoxyhD4PY5-UxkRnGD-K4Psp1ZzGg/viewform?usp=sharing" target="_blank">Geografi</a></li>
     </ul>
 </body>
