--- a/kelas11-3.html
+++ b/kelas11-3.html
@@ -92,10 +92,10 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScaF-9hhRk-kIn4SgPx4n-3Gl_yYc0WhNbzCGmyz5v_Rj1-FA/viewform?usp=sf_link" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScjIF75ePJTh_3yVNU0PsHaTtle3naXIDHGUvmdBuYhcuRmKg/viewform?usp=sf_link" target="_blank">Sosiologi XI 3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd79sRTC3vjGkv2cmgyxliMX2EteIQ6AKrHkCyPlo3P00oY9w/viewform?usp=sf_link" target="_blank">Matematika Wajib</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgEAIpIWwryfDCFuZzEzu90OKgLbF81ey3OxjauUxFNkOsgw/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc-P1q-uDWoad73gOQO3-cUKQ4pAPgyGfB9_T4-XpATzl2VSQ/viewform?usp=sf_link" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHLOJNxGNWrdFgBLl-74PVi9MGJ4hwgZLeOQGkuHyzwYyGNg/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfzsJriM6sFkEU8s6hOgX9aXhnskHd0EgmUxWv02JcTjEKOUQ/viewform?usp=sf_link" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdEREwTiuJzu7vLBfHIzBGyalUF8dnjG0HtYsvs-18qWXszvA/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScIYKW7LC5KYPW7tnrzPI0HV48HSUpNJ9JLdidtg7i0bYVIpQ/viewform?usp=sharing" target="_blank">Geografi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSczhV_W9DrCdBa4EH2YSpEV0ZeDTKAwKSjYJiXxdc8O8lED0w/viewform?usp=sf_link" target="_blank">Seni Budaya</a></li>
     </ul>
