--- a/kelas10-2.html
+++ b/kelas10-2.html
@@ -80,23 +80,24 @@
 <body>
     <h1>Mata Pelajaran Kelas 10-2</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeoAKXvIFItbWXndRmk9PKkwWtnLxCYbb2ubFsZAMWdwmBPAQ/viewform?usp=sf_link" target="_blank">Ekonomi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeKH9wGiYDxLtKYCLP03MhAmn6LOWk10nvcR7xwW3-Dw5KHJQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe0WjNFl0_csuaX-LdbpbBSiIIESsRJP0L3A10Fxtie02BvXg/viewform?usp=sf_link" target="_blank">Bahasa Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc8GKvAUGzgHWBGTwHLbqKsgkO34i9Z8OAFsS7eQbLxl-gmHA/viewform?usp=sf_link" target="_blank">Bahasa Arab</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdc27WDCkTHuhdb_i6mX_I-Vx3nM0o_iHWQDPkwlfS9ttbsCg/viewform?usp=sf_link" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdN4LpX2n8rBoYmF2eeT3dAlbf99Rqy-l803_XZxTzHxC-M8w/viewform?usp=sf_link" target="_blank">Informatika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSftqquSokJ4lTzSyYI5KCbS3RTI7xIS10n_l0BYJMGyFEGMFw/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSegBJRMluKGTQThOMTCaMqcMc7d0xuwicCrpNbpGTjgcNM16Q/viewform?usp=sf_link" target="_blank">Qur'an Hadist</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdjaREOzT_fI8m0yCWkOvhxLmDtEzXIoqH6pGuoJj1kjYo20A/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf6aL34WUhK1UMdzeO4S5yq0EPZXsQ0oxN_tjLOFM9gcbOQGw/viewform?usp=sf_link" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf4Kxew_R4xJETwBdYzuA2XkImx7GeMasANUn6pwZ3M5qe2GQ/viewform?usp=sf_link" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfKaSdjPXxtAbqHw8UnNr-JZgHMKQ195cKFjHN_c3zcWch_9Q/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/13Qyv2Z3BGfBct38B6iNXLAtpp-_S9PB12WDFqkVYMck/edit?usp=drivesdk" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdquhBqEuwd0DcO7Lf2Sg5ZczuBr9njqeiLy2xYR-vlvc8Ndw/viewform?usp=sf_link" target="_blank">Sosiologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfm0gP0W4l7gwGKHc98rQPtxF8hW-Lf7F4GLgYVlvhu5N0u8Q/viewform?usp=sf_link" target="_blank">Kimia Kelas 10 1 dan 2</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScXy_j5jbDRhsrE3GL2a3c0a3fBSL56IGRVmv2utMEfDfvMew/viewform?usp=sf_link" target="_blank">Kimia Kelas 10 3 dan 4</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia Kelas 10 1 dan 2</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfIr3yYxzzjyMO_RhMYJCvlWBWC1EI5ug0nuzCQET_A2AVHJw/viewform?usp=dialog" target="_blank">Kimia Kelas 10 3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeksD_AahMiuy-WioDPGFWxl-lPCndyNHwRbTh8wogi-kP89A/viewform?usp=dialog" target="_blank">Kimia Kelas 10 4</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScBKrgFtLh9x9Fnu9TXSdq5CwXvGHRz5MnfgLjOYo3FPfAFSg/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBO2CrW9uwf8BqJmyqDCVMzL-QJG62S7DqeOI6VXn4cDoUBQ/viewform?usp=sf_link" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHDqnIswlIqfvCbp1G4QabXqAtg3ct8NWVvr8A4YiHjWGVEg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li> 
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc07rvQF3SuK3Nr_gqOY_GKOz0qcYme3fywwmagQx2KfTxTKg/viewform?usp=dialog" target="_blank">Fikih</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHDqnIswlIqfvCbp1G4QabXqAtg3ct8NWVvr8A4YiHjWGVEg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzbdkwSLdJcQ6xeNHxhkoxyhD4PY5-UxkRnGD-K4Psp1ZzGg/viewform?usp=sharing" target="_blank">Geografi</a></li>
     </ul>
 </body>
