--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -92,9 +92,9 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfKaSdjPXxtAbqHw8UnNr-JZgHMKQ195cKFjHN_c3zcWch_9Q/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/13Qyv2Z3BGfBct38B6iNXLAtpp-_S9PB12WDFqkVYMck/edit?usp=drivesdk" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdquhBqEuwd0DcO7Lf2Sg5ZczuBr9njqeiLy2xYR-vlvc8Ndw/viewform?usp=sf_link" target="_blank">Sosiologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia Kelas 10 1 dan 2</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfIr3yYxzzjyMO_RhMYJCvlWBWC1EI5ug0nuzCQET_A2AVHJw/viewform?usp=dialog" target="_blank">Kimia Kelas 10 3</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeksD_AahMiuy-WioDPGFWxl-lPCndyNHwRbTh8wogi-kP89A/viewform?usp=dialog" target="_blank">Kimia Kelas 10 4</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia Kelas 10-1 dan 10-2</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfIr3yYxzzjyMO_RhMYJCvlWBWC1EI5ug0nuzCQET_A2AVHJw/viewform?usp=dialog" target="_blank">Kimia Kelas 10=3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeksD_AahMiuy-WioDPGFWxl-lPCndyNHwRbTh8wogi-kP89A/viewform?usp=dialog" target="_blank">Kimia Kelas 10-4</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScBKrgFtLh9x9Fnu9TXSdq5CwXvGHRz5MnfgLjOYo3FPfAFSg/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc07rvQF3SuK3Nr_gqOY_GKOz0qcYme3fywwmagQx2KfTxTKg/viewform?usp=dialog" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHDqnIswlIqfvCbp1G4QabXqAtg3ct8NWVvr8A4YiHjWGVEg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
