--- a/kelas11-1.html
+++ b/kelas11-1.html
@@ -80,12 +80,12 @@
 <body>
     <h1>Mata Pelajaran Kelas 11-1</h1>
     <ul>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfv6eUaoEpIsFbBXtnRgkQtF2GESnoQgt_zMpq_TbdjPxLC7A/viewform?usp=sf_link" target="_blank">Ekonomi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBmgn5-9pyX05rIncGW0BVAE0ZtFrQtfmLjVPK15mAW-ZWcQ/viewform?usp=sf_link" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeXtJsx66-J0406GYAihKSUGtvP1KO33yqtbJ9W94F0MME5qg/viewform?usp=sf_link" target="_blank">Bahasa Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdOE3CXguUFy2k0d2nhEF1gRJZA6Xgq2hZsB36KAaUbRbmKMw/viewform?usp=sf_link" target="_blank">Bahasa Arab</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeqIES0v9Dek5cH0gx_VYEG_3ROhTBGvQw3xNXff_Pu0zgLlQ/viewform?usp=sf_link" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCRom-MhCK5_vhjuCASSD9zepDmDBVfg6Ye3u2yxuR1heycQ/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdbNHVn0mX8j9VWZWkLgKgsCsvlzgCrITuPW1AE-QO_02nxyA/viewform?usp=sf_link" target="_blank">Qur'an Hadist</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9Z-bYYCcc5_aqNE_r0nCNbsB_MP_NamNKIG8BYNBEu4Y5mw/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdKzns2AlqHSHGdKIkt3ROMUIyq4EK08axfFr1xV6pWpQjNqQ/viewform?usp=sf_link" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdwXIqs1VdN67RCSryx8lEixwhQpJFjYwkhwT2hGdmnaxV0MQ/viewform?usp=sf_link" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScC73obQhoqZUV7_Fi0bMSTHiK0tgYXtuRapCfAAnr2A_Y7Uw/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
@@ -93,7 +93,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScjIF75ePJTh_3yVNU0PsHaTtle3naXIDHGUvmdBuYhcuRmKg/viewform?usp=sf_link" target="_blank">Sosiologi XI 3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgEAIpIWwryfDCFuZzEzu90OKgLbF81ey3OxjauUxFNkOsgw/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc-P1q-uDWoad73gOQO3-cUKQ4pAPgyGfB9_T4-XpATzl2VSQ/viewform?usp=sf_link" target="_blank">Fikih</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfeAO3YhOrs9MMTmE292q-Pje_UpPrSwDBO6VRYEZrtoV3gTA/viewform?usp=dialog" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHLOJNxGNWrdFgBLl-74PVi9MGJ4hwgZLeOQGkuHyzwYyGNg/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdEREwTiuJzu7vLBfHIzBGyalUF8dnjG0HtYsvs-18qWXszvA/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScIYKW7LC5KYPW7tnrzPI0HV48HSUpNJ9JLdidtg7i0bYVIpQ/viewform?usp=sharing" target="_blank">Geografi</a></li>
