--- a/kelas11-3.html
+++ b/kelas11-3.html
@@ -97,7 +97,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHLOJNxGNWrdFgBLl-74PVi9MGJ4hwgZLeOQGkuHyzwYyGNg/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdEREwTiuJzu7vLBfHIzBGyalUF8dnjG0HtYsvs-18qWXszvA/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScIYKW7LC5KYPW7tnrzPI0HV48HSUpNJ9JLdidtg7i0bYVIpQ/viewform?usp=sharing" target="_blank">Geografi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJb9dJ69sGaJKs0NnJjMPiX_NM7_g_z9Kbb6n5HxAWHAmOBw/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJb9dJ69sGaJKs0NnJjMPiX_NM7_g_z9Kbb6n5HxAWHAmOBw/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
     </ul>
 </body>
 </html>
