--- a/kelas11-2.html
+++ b/kelas11-2.html
@@ -82,7 +82,7 @@
     <ul>
          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBmgn5-9pyX05rIncGW0BVAE0ZtFrQtfmLjVPK15mAW-ZWcQ/viewform?usp=sf_link" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeXtJsx66-J0406GYAihKSUGtvP1KO33yqtbJ9W94F0MME5qg/viewform?usp=sf_link" target="_blank">Bahasa Inggris</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdq_zxguHeGzKCQLs7Hi3GIxZdLsD-Easm1hyc6UW5FObq-hw/viewform?usp=dialog">Bahasa Arab</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdq_zxguHeGzKCQLs7Hi3GIxZdLsD-Easm1hyc6UW5FObq-hw/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeqIES0v9Dek5cH0gx_VYEG_3ROhTBGvQw3xNXff_Pu0zgLlQ/viewform?usp=sf_link" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCRom-MhCK5_vhjuCASSD9zepDmDBVfg6Ye3u2yxuR1heycQ/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9Z-bYYCcc5_aqNE_r0nCNbsB_MP_NamNKIG8BYNBEu4Y5mw/viewform?usp=dialog" target="_blank">Al-Qur'an Hadist</a></li>
