--- a/kelas11-2.html
+++ b/kelas11-2.html
@@ -89,7 +89,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdKzns2AlqHSHGdKIkt3ROMUIyq4EK08axfFr1xV6pWpQjNqQ/viewform?usp=sf_link" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdwXIqs1VdN67RCSryx8lEixwhQpJFjYwkhwT2hGdmnaxV0MQ/viewform?usp=sf_link" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScC73obQhoqZUV7_Fi0bMSTHiK0tgYXtuRapCfAAnr2A_Y7Uw/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScaF-9hhRk-kIn4SgPx4n-3Gl_yYc0WhNbzCGmyz5v_Rj1-FA/viewform?usp=sf_link" target="_blank">PKN</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScaF-9hhRk-kIn4SgPx4n-3Gl_yYc0WhNbzCGmyz5v_Rj1-FA/viewform?usp=sf_link" target="_blank">PPKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScjIF75ePJTh_3yVNU0PsHaTtle3naXIDHGUvmdBuYhcuRmKg/viewform?usp=sf_link" target="_blank">Sosiologi XI 3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgEAIpIWwryfDCFuZzEzu90OKgLbF81ey3OxjauUxFNkOsgw/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
