--- a/kelas11-1.html
+++ b/kelas11-1.html
@@ -84,9 +84,9 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeXtJsx66-J0406GYAihKSUGtvP1KO33yqtbJ9W94F0MME5qg/viewform?usp=sf_link" target="_blank">Bahasa Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdq_zxguHeGzKCQLs7Hi3GIxZdLsD-Easm1hyc6UW5FObq-hw/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeqIES0v9Dek5cH0gx_VYEG_3ROhTBGvQw3xNXff_Pu0zgLlQ/viewform?usp=sf_link" target="_blank">Sejarah Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCRom-MhCK5_vhjuCASSD9zepDmDBVfg6Ye3u2yxuR1heycQ/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdRCcro9KKkocoIulLsc5cSZOA5aukdbBuVNjVc9Jp3v_MavA/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9Z-bYYCcc5_aqNE_r0nCNbsB_MP_NamNKIG8BYNBEu4Y5mw/viewform?usp=dialog" target="_blank">Al-Qur'an Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdKzns2AlqHSHGdKIkt3ROMUIyq4EK08axfFr1xV6pWpQjNqQ/viewform?usp=sf_link" target="_blank">Fisika</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCIRSQLnGNhoq6BRabvfYxK_tGHtxpdBc30AqZLAEYLI1Lmg/viewform?usp=dialog" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSchpwD9rvb4Tv-agnDLtJgW2di7SaT6tOYjJUomyf8jRMi8rw/viewform?usp=header" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScC73obQhoqZUV7_Fi0bMSTHiK0tgYXtuRapCfAAnr2A_Y7Uw/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd-iQ1AGNAUPp1YYnePCZ2R5o2Og7Ot4UfD9OWTthBvfOOPQw/viewform?usp=dialog" target="_blank">PKN</a></li>
