--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -89,9 +89,9 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdjaREOzT_fI8m0yCWkOvhxLmDtEzXIoqH6pGuoJj1kjYo20A/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHBIvXOeGMmMYqZDD7bJaAx0fQyAwoFR1utqomdSKHpWbabg/viewform?usp=dialog" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJL5loCubb6eWkBNIk0gn1lbxsjDwbBJ68oH-y88xcEG0njw/viewform?usp=header" target="_blank">Biologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfKaSdjPXxtAbqHw8UnNr-JZgHMKQ195cKFjHN_c3zcWch_9Q/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdcP1ZuHKY1tpNkSdBwkGoh7kva81qqfpm3Txxj99-pF7_WHQ/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHlKEsws5plADRWKoDoQic3VmpVxBWZR5aToDhGrpnS7Zolg/viewform?usp=dialog" target="_blank">PKN</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdquhBqEuwd0DcO7Lf2Sg5ZczuBr9njqeiLy2xYR-vlvc8Ndw/viewform?usp=sf_link" target="_blank">Sosiologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdXwOiAdyOcmtPJ3IfEv27hWnuGnzPwXCZFLR1v3KjZKVWlFg/viewform?usp=dialog" target="_blank">Sosiologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia Kelas 10-1 dan 10-2</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfIr3yYxzzjyMO_RhMYJCvlWBWC1EI5ug0nuzCQET_A2AVHJw/viewform?usp=dialog" target="_blank">Kimia Kelas 10=3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeksD_AahMiuy-WioDPGFWxl-lPCndyNHwRbTh8wogi-kP89A/viewform?usp=dialog" target="_blank">Kimia Kelas 10-4</a></li>
