--- a/kelas11-3.html
+++ b/kelas11-3.html
@@ -88,9 +88,9 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9Z-bYYCcc5_aqNE_r0nCNbsB_MP_NamNKIG8BYNBEu4Y5mw/viewform?usp=dialog" target="_blank">Al-Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCIRSQLnGNhoq6BRabvfYxK_tGHtxpdBc30AqZLAEYLI1Lmg/viewform?usp=dialog" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSchpwD9rvb4Tv-agnDLtJgW2di7SaT6tOYjJUomyf8jRMi8rw/viewform?usp=header" target="_blank">Biologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScC73obQhoqZUV7_Fi0bMSTHiK0tgYXtuRapCfAAnr2A_Y7Uw/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScQadl_bqwPjPenlMdKRMOaTUQgNHWLK15Ap6_ajdGhXtVRlg/viewform?usp=header" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd-iQ1AGNAUPp1YYnePCZ2R5o2Og7Ot4UfD9OWTthBvfOOPQw/viewform?usp=dialog" target="_blank">PKN</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScjIF75ePJTh_3yVNU0PsHaTtle3naXIDHGUvmdBuYhcuRmKg/viewform?usp=sf_link" target="_blank">Sosiologi XI 3</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScWYPNtwCURSOWR8vs9dq_6XbRsGoMD4Rtyh4FpkciSSVFntg/viewform?usp=dialog" target="_blank">Sosiologi XI 3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgEAIpIWwryfDCFuZzEzu90OKgLbF81ey3OxjauUxFNkOsgw/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfeAO3YhOrs9MMTmE292q-Pje_UpPrSwDBO6VRYEZrtoV3gTA/viewform?usp=dialog" target="_blank">Fikih</a></li>
