--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -84,7 +84,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJb9dJ69sGaJKs0NnJjMPiX_NM7_g_z9Kbb6n5HxAWHAmOBw/viewform?usp=dialog" target="_blank">Bahasa Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc5Ls2jUcrrwNm5uEwA7-w9i_8D1Ix1_tp3SUNEGQkwrKxpAA/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgkU8xz5IAYK1jKs7mfy-0vbte9XZj92xdomAUlao_BwIezg/viewform?usp=header" target="_blank">Sejarah Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdN4LpX2n8rBoYmF2eeT3dAlbf99Rqy-l803_XZxTzHxC-M8w/viewform?usp=sf_link" target="_blank">Informatika</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScH7iKdlktG2b5V6HB_tPv8xdm4jR7F0HJ46aG5Zes5G2_zIg/viewform?usp=dialog" target="_blank">Informatika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe-xEKCOFx6mxZygwMppS-VOOocX6fiSFbN2mGlSaeuCMWgFg/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdjaREOzT_fI8m0yCWkOvhxLmDtEzXIoqH6pGuoJj1kjYo20A/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHBIvXOeGMmMYqZDD7bJaAx0fQyAwoFR1utqomdSKHpWbabg/viewform?usp=dialog" target="_blank">Fisika</a></li>
@@ -99,6 +99,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc07rvQF3SuK3Nr_gqOY_GKOz0qcYme3fywwmagQx2KfTxTKg/viewform?usp=dialog" target="_blank">Fikih_</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHDqnIswlIqfvCbp1G4QabXqAtg3ct8NWVvr8A4YiHjWGVEg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCL1Mj4JD63H4AQZfUYLm9lZflcBVktKVsVV-s4_b0wWkWZQ/viewform?usp=dialog" target="_blank">Geografi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc-ZqGlO3e1rhM8UlE7agLPrIptS3yOl6Shqb-kjgWfkMFbBA/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
