--- a/kelas11-1.html
+++ b/kelas11-1.html
@@ -94,10 +94,12 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgEAIpIWwryfDCFuZzEzu90OKgLbF81ey3OxjauUxFNkOsgw/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfeAO3YhOrs9MMTmE292q-Pje_UpPrSwDBO6VRYEZrtoV3gTA/viewform?usp=dialog" target="_blank">Fikih</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScHLOJNxGNWrdFgBLl-74PVi9MGJ4hwgZLeOQGkuHyzwYyGNg/viewform?usp=sf_link" target="_blank">Matematika Tingkat Lanjut</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeEKBHfyW0B0sc0XCuMGYhhU6SAIhRpUOc1mX7sngUYscb7qw/viewform?usp=dialog" target="_blank">Matematika Peminatan</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdf1jq5npEHI0vEtY5vmS2U2Cil3lXMmOtuoiyn40myXGyTTg/viewform?usp=dialog" target="_blank">Bahasa Inggris Peminatan</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdEREwTiuJzu7vLBfHIzBGyalUF8dnjG0HtYsvs-18qWXszvA/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdDukdrTYw7DYuegSlRfTPzcMtFKlTD1C9IZkk3CHFpGFTY3A/viewform?usp=dialog" target="_blank">Geografi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBm8ugcHxrFMFXGN7QwninqU6DE_A8lgkJ6wouiWoti5KxaQ/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf2aTiIl01J3EI0cQu_RPFR75RaGBfbDLRic03QnziSjCd-bg/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
