--- a/kelas11-2.html
+++ b/kelas11-2.html
@@ -81,7 +81,7 @@
     <h1>Mata Pelajaran Kelas 11-2</h1>
     <ul>
          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBmgn5-9pyX05rIncGW0BVAE0ZtFrQtfmLjVPK15mAW-ZWcQ/viewform?usp=sf_link" target="_blank">Ekonomi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScfapfD5pl_Iq_mJNEVhG_wg4ZJifWhfgSW08YIWYx1LpB8Ug/viewform?usp=dialog" target="_blank">Bahasa Inggris</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScfapfD5pl_Iq_mJNEVhG_wg4ZJifWhfgSW08YIWYx1LpB8Ug/viewform?usp=dialog" target="_blank">Bahasa_Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdq_zxguHeGzKCQLs7Hi3GIxZdLsD-Easm1hyc6UW5FObq-hw/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdZyGpbpmgQ-85K91kEZDQufHUhVAcr0pJ-gihYRdcr2dkOCA/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdRCcro9KKkocoIulLsc5cSZOA5aukdbBuVNjVc9Jp3v_MavA/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
