--- a/kelas11-3.html
+++ b/kelas11-3.html
@@ -87,13 +87,13 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdRCcro9KKkocoIulLsc5cSZOA5aukdbBuVNjVc9Jp3v_MavA/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9Z-bYYCcc5_aqNE_r0nCNbsB_MP_NamNKIG8BYNBEu4Y5mw/viewform?usp=dialog" target="_blank">Al-Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCIRSQLnGNhoq6BRabvfYxK_tGHtxpdBc30AqZLAEYLI1Lmg/viewform?usp=dialog" target="_blank">Fisika</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSchpwD9rvb4Tv-agnDLtJgW2di7SaT6tOYjJUomyf8jRMi8rw/viewform?usp=header" target="_blank">Biologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe0v5X__Vy8xSaYjmjKn_7sZGp9PNbVerFknkRuP5X-u1CK4w/viewform?usp=dialog" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScQadl_bqwPjPenlMdKRMOaTUQgNHWLK15Ap6_ajdGhXtVRlg/viewform?usp=header" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd-iQ1AGNAUPp1YYnePCZ2R5o2Og7Ot4UfD9OWTthBvfOOPQw/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScWYPNtwCURSOWR8vs9dq_6XbRsGoMD4Rtyh4FpkciSSVFntg/viewform?usp=dialog" target="_blank">Sosiologi XI 3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgEAIpIWwryfDCFuZzEzu90OKgLbF81ey3OxjauUxFNkOsgw/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfeAO3YhOrs9MMTmE292q-Pje_UpPrSwDBO6VRYEZrtoV3gTA/viewform?usp=dialog" target="_blank">Fikih</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd1zEY_hPSOd3FisJFKQPBOftcG4_pQSFRtwZ2QyMZI-AqP5g/viewform?usp=dialog" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeEKBHfyW0B0sc0XCuMGYhhU6SAIhRpUOc1mX7sngUYscb7qw/viewform?usp=dialog" target="_blank">Matematika Peminatan</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdf1jq5npEHI0vEtY5vmS2U2Cil3lXMmOtuoiyn40myXGyTTg/viewform?usp=dialog" target="_blank">Bahasa Inggris Peminatan</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScJlVqS5-iu85BmIdGSXcYHYgEJe9FU0YH5t08PamiSxe4Cdg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
@@ -103,5 +103,6 @@
     </ul>
 </body>
 </html>
+
 
 
